--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>恒达视频教程首页</title>
+	<title>曾鸡样教程首页</title>
   </head>
   <body>	
 	<h1>首页</h1> 
     <hr/>
-    <h3>这是恒达视频内容</h3> 
+    <h3>这是曾鸡样视频内容</h3> 
   </body>
 </html>
